# soliloquy

./: .gitignore  HACKING  README  configure.ac  file-preamble  regen.sh
src/: Makefile.am  Makefile.am.head  activity.c  buffer_editor.c  cmdline.c  cmdline.h  colour_attr_xlate.c  common.c  common.h  core_keybindings.c  doccheck  dynar.m4  dynar.plt  echo_area.c  face.c  face.h  file_buffer.c  fizz_buzz_backing.c  genclasses  implicit_symbols  inc_ncurses.h  interactive.c  interactive.h  kb_layout_xlate.c  kb_layout_xlate.h  kernel.c  kernel.txt  key_dispatch.c  key_dispatch.h  kill_ring.c  line_editor.c  list.m4  list.plt  main.c  man  message.c  pattern.c  primes_transcript.c  qstring.c  qstring.h  (+14 more)
src/control-character-display-mode/: README  control_character_display.c  ctrl_chr_dsp_mode.c  modinfo
src/execute-process/: execute.c  integration.c  modinfo  output_to_transcript.c  stdin_from_line_editor.c
src/line-format-adapter/: README  line_format_adapter.c
src/linum-mode/: README  linum.c
src/suites/: all  minimal  nightmare  std
src/symbol-chord-mode/: README  symbol_chord.c
src/tty-emulation/: basic_control_chars.c  transcript_tty.c  tty_consumer.c  tty_emulator.c
